# loan_ec

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
controller/: index.js
data/: data.csv  data_grouped.csv  loans.json  loans_grouped.json  parameters.json
docs/: creditriskplus_vs_riskmetrics.R  credtDemo-concordance.tex  credtDemo.Rnw  credtDemo.tex  loan_density.json  loan_density_2.json  loan_density_aggr.json  loan_density_full.json  plot_results.R
src/: lib.rs  main.rs  vec_to_mat.rs
src/lib/: lib.rs  loan_ec.rs  risk_contributions.rs  vasicek.rs
