[package]
name = "credit_faas_demo"
version = "0.1.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]

[dependencies]
fang_oost = "0.13.7"
num-complex = "0.2"
rayon = "1.0.1"
cf_functions = "0.10.0"
cf_dist_utils = "0.7.0"
rand = "0.5"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
[dev-dependencies]
approx = "0.2.0"

[[bin]]
name = "loan_cf"
path = "src/bin/loan_cf.rs"

[lib]
name = "utils"
path = "src/lib/lib.rs"