[package]
name = "credit_ec"
version = "0.0.1"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/loan_ec"
repository = "https://github.com/phillyfan1138/loan_ec"
readme = "README.md"
license = "MIT"
description = "A library for providing loan level EC measures."

[dependencies]
fang_oost = "0.13.7"
num-complex = "0.2"
rayon = "1.0.1"
cf_functions = "0.10.0"
cf_dist_utils = "0.7.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
probability = "0.15.12"
[dev-dependencies]
approx = "0.2.0"
itertools = "0.8"

[badges]
travis-ci = { repository = "phillyfan1138/loan_ec" }