[package]
name = "loan_ec"
version = "0.1.2"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/loan_ec"
repository = "https://github.com/phillyfan1138/loan_ec"
readme = "README.md"
license = "MIT"
description = "A library for providing loan level EC measures."

[dependencies]
num-complex = "0.2"
rayon = "1.0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
approx = "0.2.0"
fang_oost = "0.13.7"
cf_functions = "0.10.0"
cf_dist_utils = "0.7.2"

[badges]
travis-ci = { repository = "phillyfan1138/loan_ec" }